[NIAD-3122] Remove unnecessary refactor